feat: add upload system, zipping multiple files, add dashboard page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
                 <a routerLink="/" class="header__nav__list__item__link link">Link</a>
             </li>
             <li class="header__nav__list__item list-item">
-                <a routerLink="/" class="header__nav__list__item__link link">Link</a>
+                <a routerLink="/dashboard" class="header__nav__list__item__link link">Dashboard</a>
             </li>
             <li class="header__nav__list__item list-item">
                 <a (click)="switchTheme()"
