--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="home">
     <app-upload></app-upload>
+    <button class="home__button btn btn-green" (click)="uploadFiles()">Upload</button>
 </div>
