--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@ h6 {
     --mauve: #8839ef;
     --green: #40a02b;
     --red: #d20f39;
+    --blue: #1e66f5;
 
     --mauve-filter: invert(23%) sepia(74%) saturate(5228%) hue-rotate(261deg) brightness(100%) contrast(88%);
 
@@ -56,6 +57,7 @@ h6 {
     --mauve: #cba6f7;
     --green: #a6e3a1;
     --red: #f38ba8;
+    --blue: #89b4fa;
 
     --active: #cba6f7ac;
 
