refactoring and fix buttons in header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,8 +11,8 @@
                 <a routerLink="/dashboard" class="header__nav__list__item__link link">Dashboard</a>
             </li>
             <li class="header__nav__list__item list-item">
-                <a (click)="switchTheme()"
-                    class="header__nav__list__item__button btn btn-green">Switch</a>
+                <button (click)="switchTheme()"
+                    class="header__nav__list__item__button btn btn-green">Switch</button>
             </li>
             <li class="header__nav__list__item list-item">
                 <!-- <a routerLink="/login" class="header__nav__list__item__button btn">Login</a> -->
