--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,9 @@
 .login {
 
-    &__button {
-        font-size: 21.6px;
-        font-weight: 400;
-    }
+    // &__button {
+    //     font-size: 21.6px;
+    //     font-weight: 400;
+    // }
 
     .popup {
         // .form {
