--- a/src/app/components/popup/popup.component.scss
+++ b/src/app/components/popup/popup.component.scss
@@ -21,5 +21,8 @@
         border-radius: 7px;
         padding: 20px;
         z-index: 550;
+        // max-width: 45%;
+        // width: 45%;
+
     }
 }
