--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -30,8 +30,8 @@
                 }
 
                 &__button {
-                    font-size: 1.2em;
-                    text-decoration: none;
+                    // font-size: 1.2em;
+                    // text-decoration: none;
                 }
             }
         }
