--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="main">
         <router-outlet></router-outlet>
     </div>
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </div>
 
 <app-snackbar #snackBar />
