--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <nav class="header__nav nav">
         <ul class="header__nav__list list">
             <li class="header__nav__list__item list-item">
-                <a routerLink="/" class="header__nav__list__item__link link">Link</a>
+                <a routerLink="/" class="header__nav__list__item__link link">Upload file</a>
             </li>
             <li class="header__nav__list__item list-item">
                 <a routerLink="/dashboard" class="header__nav__list__item__link link">Dashboard</a>
@@ -15,7 +15,6 @@
                     class="header__nav__list__item__button btn btn-green">Switch</button>
             </li>
             <li class="header__nav__list__item list-item">
-                <!-- <a routerLink="/login" class="header__nav__list__item__button btn">Login</a> -->
                 <app-login></app-login>
             </li>
         </ul>
